# video-service

./: .gitignore
files/1/: labels.txt
video_service/back/: README.md  main.py  pyproject.toml
video_service/back/core/: settings.py
video_service/back/timecode_api/: repository.py  routes.py
video_service/back/timecode_api/services/: checks.py  data_mining.py
video_service/front/: package-lock.json
video_service/front/src/: App.vue  main.js
video_service/front/src/components/: Video.vue
