[tool.poetry]
name = "video-timecode"
version = "0.1.0"
description = ""
authors = ["Tarlex <tarlex.py@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
pandas = "^1.3.4"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
